--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 		<meta charSet="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="google-site-verification" content="s123438F1PnVMuOT2D-UM6acNzl2thVY_e5s_-Uc83bj27KY">
-		
+
+		<link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet"></link>		
 		<link rel="shortcut icon" href="/static/favicon.ico"></link>
 
 	</head>
