--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 		<meta property="og:type" content="website">
 		<meta property="og:description" content="Play for a better Democracy">
 		<meta property="og:url" content="https://www.fiftynifty.org/">
-		<meta property="og:image" content="https://www.fiftynifty.org/static/american-flag.jpg">
-		<meta property="og:image:url" content="https://www.fiftynifty.org/static/american-flag.jpg">
+		<meta property="og:image" content="https://www.fiftynifty.org/static/share-img.jpg">
+		<meta property="og:image:url" content="https://www.fiftynifty.org/static/share-img.jpg">
 		<meta property="og:image:width" content="500">
 		<meta property="fb:app_id" content="375710412814285">
 		<meta name="twitter:card" content="summary">
 		<meta name="twitter:site" content="@isTravis">
 		<meta name="twitter:title" content="Fifty Nifty">
 		<meta name="twitter:description" content="Play for a better Democracy">
-		<meta name="twitter:image" content="https://www.fiftynifty.org/static/american-flag.jpg">
+		<meta name="twitter:image" content="https://www.fiftynifty.org/static/share-img.jpg">
 		<meta name="twitter:image:alt" content="Fifty Nifty">
 	</head>
 	<body>
